--- a/package.json
+++ b/package.json
@@ -3,9 +3,21 @@
   "version": "0.2.0",
   "description": "Introduces ordered and unordered lists feature to CKEditor 5.",
   "keywords": [],
-  "dependencies": {},
+  "dependencies": {
+    "ckeditor5-engine": "ckeditor/ckeditor5-engine",
+    "ckeditor5-core": "ckeditor/ckeditor5-core",
+    "ckeditor5-ui": "ckeditor/ckeditor5-ui",
+    "ckeditor5-ui-default": "ckeditor/ckeditor5-ui-default",
+    "ckeditor5-utils": "ckeditor/ckeditor5-utils"
+  },
   "devDependencies": {
     "@ckeditor/ckeditor5-dev-lint": "^1.0.1",
+    "ckeditor5-editor-classic": "ckeditor/ckeditor5-editor-classic",
+    "ckeditor5-enter": "ckeditor/ckeditor5-enter",
+    "ckeditor5-heading": "ckeditor/ckeditor5-heading",
+    "ckeditor5-paragraph": "ckeditor/ckeditor5-paragraph",
+    "ckeditor5-typing": "ckeditor/ckeditor5-typing",
+    "ckeditor5-undo": "ckeditor/ckeditor5-undo",
     "gulp": "^3.9.0",
     "guppy-pre-commit": "^0.4.0"
   },
