--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "ckeditor5-list",
+  "name": "@ckeditor/ckeditor5-list",
   "version": "0.4.0",
   "description": "Introduces ordered and unordered lists feature to CKEditor 5.",
   "keywords": [],
   "dependencies": {
-    "ckeditor5-engine": "ckeditor/ckeditor5-engine",
-    "ckeditor5-core": "ckeditor/ckeditor5-core",
-    "ckeditor5-ui": "ckeditor/ckeditor5-ui",
-    "ckeditor5-utils": "ckeditor/ckeditor5-utils"
+    "@ckeditor/ckeditor5-engine": "*",
+    "@ckeditor/ckeditor5-core": "*",
+    "@ckeditor/ckeditor5-ui": "*",
+    "@ckeditor/ckeditor5-utils": "*"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-dev-lint": "^2.0.0",
-    "ckeditor5-editor-classic": "ckeditor/ckeditor5-editor-classic",
-    "ckeditor5-enter": "ckeditor/ckeditor5-enter",
-    "ckeditor5-heading": "ckeditor/ckeditor5-heading",
-    "ckeditor5-paragraph": "ckeditor/ckeditor5-paragraph",
-    "ckeditor5-typing": "ckeditor/ckeditor5-typing",
-    "ckeditor5-undo": "ckeditor/ckeditor5-undo",
+    "@ckeditor/ckeditor5-editor-classic": "*",
+    "@ckeditor/ckeditor5-enter": "*",
+    "@ckeditor/ckeditor5-heading": "*",
+    "@ckeditor/ckeditor5-paragraph": "*",
+    "@ckeditor/ckeditor5-typing": "*",
+    "@ckeditor/ckeditor5-undo": "*",
     "gulp": "^3.9.0",
     "guppy-pre-commit": "^0.4.0"
   },
