--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ckeditor/ckeditor5-editor-classic": "^0.8.0",
     "@ckeditor/ckeditor5-enter": "^0.10.0",
     "@ckeditor/ckeditor5-heading": "^0.10.0",
+    "@ckeditor/ckeditor5-link": "^0.8.0",
     "@ckeditor/ckeditor5-typing": "^0.10.0",
     "@ckeditor/ckeditor5-undo": "^0.9.0",
     "eslint-config-ckeditor5": "^1.0.5",
