Internal: Added `files` key to `package.json`
Read more https://github.com/ckeditor/ckeditor5/issues/563.

--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ckeditor/ckeditor5-list.git"
-  }
+  },
+  "files": [
+    "lang",
+    "src",
+    "theme"
+  ]
 }
