--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@ckeditor/ckeditor5-list",
   "version": "0.7.0",
-  "description": "Introduces ordered and unordered lists feature to CKEditor 5.",
-  "keywords": [],
+  "description": "Ordered and unordered lists feature to CKEditor 5.",
+  "keywords": [
+    "ckeditor5",
+    "ckeditor5-feature"
+  ],
   "dependencies": {
     "@ckeditor/ckeditor5-engine": "^0.11.0",
     "@ckeditor/ckeditor5-paragraph": "^0.9.0",
