Tests: Fixed linting on CI. See https://github.com/ckeditor/ckeditor5/pull/597#issuecomment-335584161.

--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
       "eslint --quiet"
     ]
   },
-  "eslintIgnore": [ "src/lib/**" ]
+  "eslintIgnore": [
+    "src/lib/**",
+    "packages/**"
+  ]
 }
