--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0-beta.2",
   "description": "Ordered and unordered lists feature to CKEditor 5.",
   "keywords": [
+    "ckeditor",
     "ckeditor5",
     "ckeditor5-feature"
   ],
